# rodent-ai-vision-box

./: .dockerignore  .env.example  .gitignore  .gitignore.recommended  ANNOTATION_WORKFLOW.md  CHANGELOG.md  CLIENT_SIMPLE_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_TEST_RESULTS.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE_CARD.md  QUICK_START.md  README.md  ROBOFLOW_AUTOLABEL.md  ROBOFLOW_CSV_UPLOAD.md  SETUP_GUIDE.md  TEST_RESULTS_SUMMARY.md  USER_GUIDE_SIMPLE.md  cleanup_project.sh  corrected_video_test.py  debug_video_test.py  docker-compose.yml  fix_sms.md  main.py  pyproject.toml  requirements.txt  run_video_test.py  setup.py  setup.sh  simple_video_test.py  test_detection.py  test_emailjs.py  test_real_detection_email.py  test_twilio.py
.github/workflows/: ci.yml
app/: actuator.py  config.py  detection.py  notifier.py  utils.py
archive/: .env.example
archive/test_results/: video_test_plan_20251008_111005.json
archive/test_results/20251008_133928/: test_report.html
archive/test_scripts/: fixed_video_test.py  quick_video_test.py  test_detection_with_email.py  test_video_detection.py  test_videos.py  test_whatsapp.py
colab/: rodent_training_colab.ipynb
config/: config.yaml
data/: detections.db
data/detections/: test.txt
docs/: CLEANUP_REPORT.md  COMMERCIAL_DEPLOYMENT.md  DELIVERABLES_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  EMAILJS_SETUP.md  PREPARE_FOR_CLIENT.md  QUICK_START.md  REQUIREMENTS_VERIFICATION.md  SD_CARD_SCRIPTS_COMPARISON.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USER_MANUAL.md
model/: test.txt
scripts/: auto_annotation_helper.py  bulk_scraper.py  create_complete_sd_image.sh  create_plug_and_play_sd.sh  create_roboflow_csv.py  create_sd_image.sh  deploy.sh  download_model.sh  fast_bulk_download.py  prepare_for_annotation.py  prepare_multiclass_dataset.py  prepare_sd_card_deployment.sh  quick_scraper.py  rodent-detection.service  scrape_rodent_images.py  search_roboflow_datasets.py  setup_raspberry_pi.sh  test.txt  test_notifications.py  test_video_detection.py  train_multiclass_yolov8.py
src/: alert_engine.py  config_manager.py  database.py  detection_engine.py  logger.py  main.py  notification_service.py  video_ingestion.py
src/commercial/: license_manager.py
test_results/: test_preparation_20251008_110534.json
test_results/20251008_133928/: test_report.json
tests/: __init__.py  conftest.py  test.txt
utils/: test_system.py
